[project]
name = "nucypher-async"
version = "0.1.0"
description = ""
authors = [
    {name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"},
]
dependencies = [
    "trio>=0.19.0",
    "hypercorn[trio]>=0.13",
    "starlette>=0.19",
    "httpx>=0.22",
    "cryptography>=36",
    "nucypher-core>=0.1",
    "pynacl>=1.5",
    "mnemonic>=0.20",
    "eth-account>=0.5",
    "pons>=0.4.2",
    "appdirs>=1.4",
    "mako>=1",
    "sortedcontainers>=2.4",
    "arrow>=1",
    "humanize>=4",
]
requires-python = ">=3.8"
license-expression = "GPL-3.0-only"

[project.optional-dependencies]
tests = [
    "pytest>=6",
    "pytest-trio",
    "pytest-cov",
]
docs = [
    "sphinx>=4",
    "furo",
]
lint = [
    "mypy>=0.941",
    "trio-typing[mypy]>=0.7.0",
    "black",
    "types-setuptools>=63",
]

[project.scripts]
nucypher_async = "nucypher_async.cli:main"

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
