[project]
name = "nucypher-async"
version = "0.1.0"
description = ""
authors = [
    {name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"},
]
dependencies = [
    "trio>=0.19.0",
    "hypercorn[trio]>=0.14",
    "starlette>=0.19",
    "httpx>=0.22",
    "cryptography>=36",
    "nucypher-core>=0.13",
    "pynacl>=1.5",
    "mnemonic>=0.20",
    "eth-account>=0.6",
    "pons>=0.7",
    "platformdirs>=2",
    "mako>=1",
    "sortedcontainers>=2.4",
    "arrow>=1",
    "humanize>=4.3",
    "typing-extensions>=4.2",
    "trio-typing>=0.9",
    "attrs>=22",
    "cattrs>=22",
]
requires-python = ">=3.8"
license = "GPL-3.0-only"

[project.optional-dependencies]
tests = [
    "pytest>=6",
    "pytest-trio",
    "pytest-cov",
]
docs = [
    "sphinx>=4",
    "furo",
]
lint = [
    "mypy>=1.4",
    "trio-typing[mypy]>=0.8",
    "black>=23",
    "types-setuptools>=63",
    "types-python-dateutil>=2.8", # otherwise some type derivation for `arrow` types does not work
    "pytest>=6", # for the typing of pytest decorators
]

[project.scripts]
nucypher_async = "nucypher_async.cli:main"

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
